@@ -1,0 +1,5 @@
+#include <Foundation/Foundation.h>
+
+@interface TestEnglish: NSObject
++ (NSString *) intToEnglish: (int) i;
+@end
